# in-vehicle-driver-state-analysis

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  DockerfileCUDA  DockerfilePytorchPoetry  Justfile  LICENSE.txt  README.md  anomaly_detection.ipynb  clip.ipynb  clip_mwe.py  clip_roc_charts.ipynb  depth_anything.ipynb  depth_comparison.ipynb  dmd.ipynb  dmd_temporal_anomaly_detection.ipynb  environment.yml  inference.ipynb  inference_segmentation.ipynb  job_depth.ipynb  job_segmentation.ipynb  mrl_driver.ipynb  mrl_eda.ipynb  numpy_memory_map.ipynb  post_processing.ipynb  pyproject.toml  run_clip_for_drivers.py  run_depth.py  run_depth_dmd.py  run_memory_map_conversion.py  run_memory_map_conversion.sh  run_memory_map_conversion_dmd.py  run_segmentation.py  run_tae_for_drivers.py  stae3d.ipynb  temporal_anomaly_detection.ipynb  train.ipynb  train_segmentation.ipynb
ae/: common.py  conv.py  fc.py
annotations/: 2.txt  2021_08_31_geordi_enyaq.txt  2021_09_06_poli_enyaq.txt  2021_09_06_poli_enyaq_normal.txt  2021_11_05_michal_enyaq.txt  2021_11_18_dans_enyaq.txt  2021_11_18_jakubh_enyaq.txt  README.md
corrosion/: __init__.py  augmentation.py  dataset.py  git.py  inference.py  model.py  plot.py
model/: __init__.py  augmentation.py  autoencoder.py  common.py  dataset.py  depth.py  dmd.py  eval.py  fonts.py  inference.py  latex.py  logging.py  memory_map.py  mlflow.py  model.py  plot.py  prep_func_builder.py  segmentation_model.py
model/ae/: __init__.py  common.py  fc.py  iscv2023.py  isvc2022.py  temporal.py  temporal_3d.py
notebooks/: alexnet.ipynb  anomaly_detection.ipynb  comparative-analysis.ipynb  inference.ipynb  train.ipynb
notebooks/clip/: clip.ipynb  clip_roc_charts.ipynb
notebooks/datasets/: dmd.ipynb  mrl_driver.ipynb  mrl_eda.ipynb
notebooks/eda/: dmd.ipynb  mrl.ipynb
notebooks/example/: .gitignore  Dockerfile  Dockerfile.cuda  Justfile  README.md  common.py  pipeline.py  (+3 more)
tests/: test_common.py  test_dataset.py
(+36 files in other folders)
